# JIT_LLVM

./: CMakeLists.txt  Makefile  README.md  app.py  cmake_install.cmake  requirements.txt  setup.py  web_playground_backend.py
examples/: all_programs.html  game.c  game.ll  gcd.c  gcd.ll  helloworld.ll  lexical_analysis  lexical_analysis.c  matrix.c  multiplication_table.c  multiplication_table.ll  myprog.c  nokshi.c  nokshi.ll  palindrome.c  palindrome.ll  playground.html  prime.ll  reverse.ll  server.py  square.c  square.ll  sumdigits_input.c  sumdigits_input.ll  syntax_analysis  syntax_analysis.c  web_playground.html
examples/lexical_analysis.dSYM/Contents/: Info.plist
examples/lexical_analysis.dSYM/Contents/Resources/DWARF/: lexical_analysis
examples/lexical_analysis.dSYM/Contents/Resources/Relocations/aarch64/: lexical_analysis.yml
examples/syntax_analysis.dSYM/Contents/: Info.plist
examples/syntax_analysis.dSYM/Contents/Resources/DWARF/: syntax_analysis
examples/syntax_analysis.dSYM/Contents/Resources/Relocations/aarch64/: syntax_analysis.yml
lljit/: JITD.cpp  JITD.h  Makefile  main.cpp  web_playground_backend.py
lljit/examples/: array.c  array.ll  factorial.ll  fibonacci.c  matrix.ll  matrix.pyx  myprog.c  myprog1.c  oddeven.c  pattern.c  prime.c  printname.c  python_advanced.ll  python_style.ll  square.c  square.ll
lljit/lljit.exe.dSYM/Contents/: Info.plist
lljit/lljit.exe.dSYM/Contents/Resources/Relocations/aarch64/: lljit.exe.yml
simple-jit-server/: CMakeLists.txt  client.cpp  code_generator.cpp  code_generator.h  memory_manager.cpp  memory_manager.h  server.cpp
